# lloyd

./: .adr-dir  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO-NOTES.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: changelog.yml
api/: Dockerfile  README.md  pyproject.toml  schema.dbml
api/src/: main.py  observability.py
api/src/api/: main.py
api/src/api/data_access/: recipe_repository.py
api/src/api/models/: recipe.py
api/src/api/routers/: observability_demo.py  recipe_router.py
api/src/api/utils/: observability.py  observability_middleware.py
docs/: index.md
liquibase/: changelog.xml  liquibase.properties
liquibase/migrations/: 001-create-recipes-table.sql  001-setup-opentelemetry-access.sql  002-create-lloyd-api-user.sql  002-seed-recipes-table.sql  003-create-recipes-table.sql  004-seed-recipes-table.sql  01-test-migration.sql
mkdocs/: Dockerfile  mkdocs.yml
mkdocs/docs/: adrs.md  demo-notes.md  drinks.md  index.md  observability.md  postgres.md  schema.md  user-story-mapping.md
mkdocs/docs/adr/: 0001-record-architecture-decisions.md  0002-use-loguru-for-logging.md
observability/: locustfile.py  loki-config.yml  otel-collector-config.yml  prometheus.yml  tempo.yml
observability/grafana/dashboards/: fastapi-observability.json
observability/grafana/datasources/: default.yml
