[project]
name = "lloyd"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.1",
    "opentelemetry-exporter-richconsole>=0.54b1",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "psycopg[binary]>=3.2.8",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
